--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -140,7 +140,7 @@ header h2 {
 	background-size: cover;
 }
 
-.wrapper {
+.wrapper .wiki-page {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: row;
@@ -241,4 +241,34 @@ nav.toolbar .control span {
 
 #entry ul li {
 	line-height: 1.25;
+}
+
+#edit-entry textarea {
+	width: 1000px;
+	height: 100vh;
+	background-color: rgba(1, 3, 16, 0.5);
+	color: inherit;
+	border: none;
+	outline: none;
+	padding: 25px;
+}
+
+#edit-entry input {
+	margin: 50px 0;
+	background-color: rgba(252, 215, 87, 1);
+	font-size: 24px;
+	padding: 15px 25px;
+	color: rgba(1, 3, 16, 1);
+	border: 1px solid rgba(252, 215, 87, 1);
+	transition: 0.3s ease all;
+	cursor: pointer;
+	font-family: 'Dosis', sans-serif;
+	text-transform: uppercase;
+	font-weight: 600;
+	float: right;
+}
+
+#edit-entry input:hover {
+	background-color: rgba(252, 215, 87, 0.9);
+	border: 1px solid rgba(252, 215, 87, 1);
 }
