--- a/views/wiki-page.hbs
+++ b/views/wiki-page.hbs
@@ -1,12 +1,14 @@
-{{> toolbar }}
-<div class="flex-wrapper">
-	<div class="content">
-		<div class="title">
-			<h2>{{ title }}</h2>
-		</div>
+<div class="wiki-page">
+	{{> toolbar }}
+	<div class="flex-wrapper">
+		<div class="content">
+			<div class="title">
+				<h2>{{ title }}</h2>
+			</div>
 
-		<div id="entry">
-			{{{ content }}}
+			<div id="entry">
+				{{{ content }}}
+			</div>
 		</div>
 	</div>
 </div>
