--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -243,6 +243,10 @@ nav.toolbar .control span {
 	line-height: 1.25;
 }
 
+#edit-entry .not-found {
+	color: rgba(252, 215, 87, 1);
+}
+
 #edit-entry textarea {
 	width: 1000px;
 	height: 100vh;
@@ -251,10 +255,10 @@ nav.toolbar .control span {
 	border: none;
 	outline: none;
 	padding: 25px;
+	margin: 30px 0;
 }
 
 #edit-entry input {
-	margin: 50px 0;
 	background-color: rgba(252, 215, 87, 1);
 	font-size: 24px;
 	padding: 15px 25px;
