--- a/views/wiki-page-edit.hbs
+++ b/views/wiki-page-edit.hbs
@@ -1,6 +1,8 @@
+{{> breadcrumbs }}
 <div class="wiki-page">
 	{{> toolbar }}
 	<div class="flex-wrapper">
+
 		<div class="content">
 			<div class="title">
 				<h2>{{ title }}</h2>
