--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -178,6 +178,8 @@ nav.toolbar .control span {
 }
 
 #breadcrumbs {
+	font-family: 'Dosis', sans-serif;
+	font-size: 20px;
 	margin: 60px 0 0 200px;
 }
 
