--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,22 +1,22 @@
 <section id="categories">
 	<div class="categories-wrapper clearfix">
 		<div class="category guides">
-			<a href="/guides"><h3>Guides</h3></a>
+			<a href="/wiki/guides"><h3>Guides</h3></a>
 		</div>
 		<div class="category ships">
-			<a href="/ships"><h3>Ships</h3></a>
+			<a href="/wiki/ships"><h3>Ships</h3></a>
 		</div>
 		<div class="category systems">
-			<a href="/systems"><h3>Systems</h3></a>
+			<a href="/wiki/systems"><h3>Systems</h3></a>
 		</div>
 		<div class="category stations">
-			<a href="/stations"><h3>Stations</h3></a>
+			<a href="/wiki/stations"><h3>Stations</h3></a>
 		</div>
 		<div class="category powerplay">
-			<a href="/powerplay"><h3>Powerplay</h3></a>
+			<a href="/wiki/powerplay"><h3>Powerplay</h3></a>
 		</div>
 		<div class="category roles">
-			<a href="/roles"><h3>Roles</h3></a>
+			<a href="/wiki/roles"><h3>Roles</h3></a>
 		</div>
 	</div>
 </section>
